--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: 'idroid';
-    src: url('../fontes/idroid.otf') format('opentype')
+    src: url('fontes/idroid.otf') format('opentype')
 }
 
 @font-face {
     font-family: 'BebasKai';
-    src: url('../fontes/bebas-kai/BebasKai.otf') format('opentype');
+    src: url('fontes/bebas-kai/BebasKai.otf') format('opentype');
 }
 
 :root {
